# Plapper

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  constant_size_literals.ixx  core_constants.ixx  core_extension_words.ixx  core_module.ixx  core_types.ixx  core_word_entries.ixx  core_words.ixx  dictionary.ixx  environment.ixx  error.ixx  input_buffer.ixx  interpreter.ixx  main.cpp  memory_buffer.ixx  output_buffer.ixx  output_device.ixx  plapper.ixx  programming_tools_words.ixx  settings.ixx  stack.ixx  terminal.ixx  test.cpp  type_params.ixx  type_traits.ixx  uninitialized.ixx
